--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@types/xml2js": "^0.4.14",
     "axios": "^1.6.8",
+    "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "xml2js": "^0.6.2"
